# barovian-activity-map

./: .gitignore  .tool-versions  README.md  docker-compose.yml  run
backend/: Dockerfile.dev  pyproject.toml
backend/backend/backend/: settings.py  urls.py
backend/backend/barovian_activity_map/: admin.py  apps.py  models.py  serializers.py  views.py
backend/backend/barovian_activity_map/migrations/: 0001_initial.py  0002_auto_20210128_2228.py  0003_event_eventtypes.py  0004_auto_20210205_0402.py
frontend/: .eslintcache  Dockerfile.dev  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: EventRow.js  MapRow.js  Navigation.js
frontend/src/libraries/: client.js
